@@ -155,6 +155,7 @@ CREATE TABLE ART_QUERIES
 	Y_AXIS_LABEL VARCHAR(50),
 	GRAPH_OPTIONS VARCHAR(200),
 	TEMPLATE VARCHAR(100),
+	DISPLAY_RESULTSET INTEGER,
 	XMLA_URL VARCHAR(300),
 	XMLA_DATASOURCE VARCHAR(50),
 	XMLA_CATALOG VARCHAR(50),
