@@ -261,7 +261,7 @@ chainedParametersNotSupported=Chained parameters are not supported in Handset De
 pivotTableSaved=Pivot Table Saved
 pivotTableDeleted=Pivot Table Deleted
 dashboardQuery=Dashboard
-runsToArchive=No. of runs to archive:
 runDate=Date
 archives=Archives
 jobArchives=Job Archives
+runsToArchive=Number of runs to archive:
