@@ -4,6 +4,8 @@ ART 2.5
 * Allow use of decimals when specifying y axis range
 * Renamed "Objects" to "Queries" and "Object Groups" to "Query Groups"
 * Support for archiving publish job results
+* Allow scheduling of heat maps
+* Support for running DDL/DML statements before query's select statement
 
 ART 2.4.1
 * Support for bubble charts
